Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111978

Setting QComboBox tab order after setting setEditable results in incorrect behavior

XMLWordPrintable

    • b1802a164 (dev), f1c0863c2 (6.5)

      When setting a QComboBox's tab order after setting it to be editable, the tab behavior is not correct.

      A workaround exists, by unsetting each QComboBox's QLineEdit's focusProxy before reassigning the tab order then setting the focusProxy back the correct behavior is observed.

      Issue is not present in 5.15.2, seems to be a regression as a result of the fix for QTBUG-81097

      The attached project reproduces the issue.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            axelspoerl Axel Spoerl
            kevin.zhang Kevin Zhang
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes